<resources>
    <string name="app_name">labexam2</string>
    <string name="loginhint">Hi, Please Login Here</string>
    <string name="email">Email</string>
    <string name="enter_your_email_hint">Enter Your Email</string>
    <string name="password">Password</string>
    <string name="enter_your_password_hint">Enter Your Password</string>
    <string name="let_s_start">Let\'s start</string>
    <string name="order_food_to_you_door_tex">Order Food To You Door</string>
    <string name="ask_not_what_you_can_do_for_your_country_ask_what_for_lunch">Ask not what you can do for your country ask what for Lunch.</string>
    <string name="get_stared_tex">Get Stared</string>
    <string name="don_t_remember_password_recovery_it">Don\'t Remember Password? Recovery it.</string>
    <string name="or_login_with">Or Login With</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="login">Login</string>
    <string name="signup">SIGNUP</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="enter_your_name_hint">Enter Your Name</string>
    <string name="email_tex">Email</string>
    <string name="enter_your_email_hint2">Enter Your Email</string>
    <string name="password_signup">Password</string>
    <string name="enter_your_password_hint2">Enter Your Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup_signup">SIGNUP</string>
    <string name="hello_amanda">Hello Amanda,</string>
    <string name="search_here_hint">Search here..</string>
    <string name="burger">Burger</string>
    <string name="all">All</string>
    <string name="noodles">Noodles</string>
    <string name="today_s_offer">Today\'s offer...</string>
    <string name="_20_off">20% off</string>
    <string name="for_3_soft_or_crunchy_tacos">For 3 Soft or Crunchy Tacos</string>
    <string name="order_now">Order Now</string>
    <string name="_4_3">4.3</string>
    <string name="s10">\$10</string>    <string name="minus">-</string>
    <string name="one">1</string>
    <string name="plus">+</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="text">Cheeseburger: beef patty, melted cheese, bun, toppings, condiments, classic sandwich.</string>
    <string name="name_text">Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="email_profile">Email</string>
    <string name="birthday">Birthday</string>
    <string name="address">Address</string>
    <string name="update">Update</string>
    <string name="logout">Logout</string>
</resources>