<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="311dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/untitled_design_3__removebg_preview" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="345dp"
            android:layout_height="87dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/create_account"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold"


            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-200dp"
            android:orientation="vertical"
            android:padding="32dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView6"
            tools:layout_editor_absoluteX="3dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextTextpassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:hint="@string/enter_your_name_hint"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="#545353"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/email_tex"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:hint="@string/enter_your_email_hint2"
                android:inputType="text"
                android:padding="12dp"
                android:textColor="#424040"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/password_signup"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:hint="@string/enter_your_password_hint2"
                android:inputType="text"
                android:padding="12dp"
                android:textColor="#424040"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/confirm_password"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextTextpassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:hint="Enter Your Password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="#545353"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_background"
                android:text="@string/signup_signup"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="27sp"
                android:textStyle="bold" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>