<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="311dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/untitled_design_3__removebg_preview" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="345dp"
            android:layout_height="87dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/loginhint"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold"


            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-150dp"
            android:orientation="vertical"
            android:padding="32dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView6"
            tools:layout_editor_absoluteX="3dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:hint="@string/enter_your_email_hint"
                android:inputType="text"
                android:padding="12dp"
                android:textColor="#424040"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextTextpassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:hint="@string/enter_your_password_hint"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="#545353"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/don_t_remember_password_recovery_it"
                android:textAlignment="center"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <View
                    android:id="@+id/view"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="#707070" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/or_login_with"
                    android:textSize="18sp" />

                <View
                    android:id="@+id/view2"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="#707070" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/social_btn_background"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="51dp"
                        android:layout_height="33dp"
                        android:layout_gravity="center_vertical"

                        app:srcCompat="@drawable/facebook" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="@string/facebook"
                        android:textColor="@color/pink"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/social_btn_background"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="51dp"
                        android:layout_height="33dp"
                        android:layout_gravity="center_vertical"

                        app:srcCompat="@drawable/google" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="@string/google"
                        android:textColor="@color/pink"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/button_background"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="23sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/button11"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_background"
                android:text="@string/signup"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="23sp"
                android:textStyle="bold" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>