<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/back1"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="-16dp">

        <TextView
            android:id="@+id/text_hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:text="@string/hello_amanda"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.223"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView130"
            android:layout_width="119dp"
            android:layout_height="125dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/profile" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText"
            android:layout_width="351dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/background_edit_search"
            android:drawableEnd="@drawable/search_icon"
            android:hint="@string/search_here_hint"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="100dp"
            android:layout_height="106dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="@+id/textInputEditText"
            app:layout_constraintTop_toBottomOf="@+id/textInputEditText"
            app:srcCompat="@drawable/allfood_removebg_preview" />

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="100dp"
            android:layout_height="106dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toEndOf="@+id/imageView14"
            app:layout_constraintTop_toBottomOf="@+id/textInputEditText"
            app:srcCompat="@drawable/img3_removebg_preview" />

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="120dp"
            android:layout_height="106dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toEndOf="@+id/imageView15"
            app:layout_constraintTop_toBottomOf="@+id/textInputEditText"
            app:srcCompat="@drawable/nuudle_removebg_preview" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:text="@string/burger"
            android:textColor="@color/pink"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/imageView15"
            app:layout_constraintTop_toBottomOf="@+id/imageView15" />

        <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="10dp"
        android:text="@string/all"
        android:textColor="@color/pink"

        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imageView14"
        app:layout_constraintTop_toBottomOf="@+id/imageView14" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/noodles"
            android:textColor="@color/pink"

            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/imageView16"
            app:layout_constraintTop_toBottomOf="@+id/imageView16" />



        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="360dp"
            android:layout_height="200dp"
            android:layout_marginTop="200dp"
            android:background="@drawable/top_background_gradent"
            app:layout_constraintEnd_toEndOf="@+id/textInputEditText"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/textInputEditText"
            app:layout_constraintTop_toBottomOf="@+id/textInputEditText">


            <TextView
                android:id="@+id/textView26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/today_s_offer"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView17"
                android:layout_width="162dp"
                android:layout_height="116dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/classic_taco" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/_20_off"
                android:textColor="@color/white"
                android:textSize="45sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textView26"
                app:layout_constraintTop_toBottomOf="@+id/textView26" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/for_3_soft_or_crunchy_tacos"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textView27"
                app:layout_constraintTop_toBottomOf="@+id/textView27" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/button40"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:paddingTop="10dp"
            android:layout_marginTop="150dp"
            android:text="@string/order_now"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:background="@drawable/getbutton_background"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>